Java 1.5-ised. Also, added QuantoFrame to embed applet from running stand-alone. Replaced (deprecated) Runtime.exec() with ProcessBuilder.
git-svn-id: https://isaplanner.svn.sourceforge.net/svnroot/isaplanner/trunk/quantomatic@1592 f8f375fb-4f10-0410-8d47-b6fbdc7ca053