@@ -1,27 +1,41 @@
 import java.io.*;
+import java.util.Map;
 
 public class QuantoBack {
 
-	final static String ml_command = "isabelle -e Controller.init(); ";
-
+	final static String ml_command = "isabelle";
 	final static String local_quanto_heap = "/.quantomatic/quanto";
 
 	Process backEnd;
 	BufferedReader from_backEnd;
+	BufferedReader from_backEndError;
 	BufferedWriter to_backEnd;
 
 	public QuantoBack() {
 		try {
-			String homedir = System.getenv("HOME");
-
-			backEnd = Runtime.getRuntime().exec(
-					ml_command + homedir + local_quanto_heap);
+			String homedir = System.getProperty("user.home");
+			String heap = homedir + local_quanto_heap;
+			ProcessBuilder pb = new ProcessBuilder(ml_command, "-e", "Controller.init();", heap);
+			Map<String,String> env = pb.environment();
+			env.put("PATH", env.get("PATH") + ":/usr/local/bin");
+			backEnd = pb.start();
 			from_backEnd = new BufferedReader(new InputStreamReader(backEnd
 					.getInputStream()));
+			from_backEndError = new BufferedReader(new InputStreamReader(backEnd
+					.getErrorStream()));
 			to_backEnd = new BufferedWriter(new OutputStreamWriter(backEnd
 					.getOutputStream()));
+			
 			System.out.println("Initialising QuantoML...");
+			
 			send("H\n"); // ask for back end status
+			/*String ln = from_backEndError.readLine();
+			while (ln != null) {
+				System.out.println("ERROR: "+ln);
+				ln = from_backEndError.readLine();
+			}*/
+			
+			System.out.println("status:");
 			System.out.println(receive()); //  print it out
 		} catch (IOException e) {
 			e.printStackTrace();
